# netatmo-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: get_homecoachs_data.rs  get_homes_data.rs  get_measure.rs  get_station_data.rs  get_token.rs  get_tokens.rs  set_temperature.rs
src/: client.rs  errors.rs  lib.rs
src/client/: authenticate.rs  get_home_status.rs  get_homes_data.rs  get_measure.rs  get_station_data.rs  set_room_thermpoint.rs
