[package]
name = "netatmo-rs"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Simple library to talk to Netatmo's API"
repository = "https://github.com/lukaspustina/netatmo-rs.git"
documentation = "http://lukaspustina.github.io/netatmo-rs"
readme = "README.md"
license = "MIT"
keywords = ["netatmo", "api"]
categories = ["api-bindings"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[dependencies]
