[package]
name = "netatmo-rs"
version = "0.2.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Simple library to talk to Netatmo's API"
repository = "https://github.com/lukaspustina/netatmo-rs.git"
documentation = "http://lukaspustina.github.io/netatmo-rs"
readme = "README.md"
license = "MIT"
keywords = ["netatmo", "api"]
categories = ["api-bindings"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[dependencies]
failure = "0.1"
reqwest = { version = "^0.9", features = ["rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dev-dependencies]
spectral = "0.6.0"

